welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:4: error: identifier expected but '}' found.
	}
        ^